# RustCNN

./: .gitignore  Cargo.toml
benches/: cnn_bench.rs
src/: cnn_struct.rs  conv_layer.rs  fully_connected_layer.rs  layer.rs  lib.rs  main.rs  max_pooling_layer.rs  run.rs
