[package]
name = "cnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cnn"
path = "src/lib.rs"

[[bin]]
name = "cnn"
path = "src/main.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
mnist = "0.5.0"
plotters = "0.3.5"
csv = "1.3.0"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cnn_bench"
harness = false
